# BookManager

./: .gitignore  .pylintrc  AUTHORS.md  CHANGELOG.md  README.md  codecov.yml  config.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: lint.yml  publish.yml  qodana_code_quality.yml  test.yml  version.yml
book_manager/: main.py
book_manager/analysis/: text_analysis.py
book_manager/compile/: compiler.py
book_manager/structure/: dir_scanner.py
book_manager/utils/: config_loader.py  logging_setup.py
docs/: API.md
tests/: conftest.py  test_compiler.py  test_config_loader.py  test_dir_scanner.py  test_integration.py  test_main.py  test_performance.py  test_text_analysis.py
